Fix footer layout issue if uncleared floats above.

--- a/scss/_regions/_footer.scss
+++ b/scss/_regions/_footer.scss
@@ -2,6 +2,7 @@
 //
 // Styleguide Site Footer
 .footer {
+  clear: both;
   width: 100%;
   background: $black;
   @include clearfix;
